# countlines

./: README.md  countlines.py  pyproject.toml
